Chnages UserCode Generation